.provarCaches/00Df2000001KKNJEA4/objects/Incapfs__ReportGenerationSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>Incapfs__Available_Distance_Units__c</fullName>
        <description>Used for providing distance units for location field</description>
        <inlineHelpText>Provide comma separated values.Following values are accepted :
km
m
mi
yd
ft

Example input : m,km</inlineHelpText>
        <label>Available Distance Units</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incapfs__DefaultSortOrder__c</fullName>
        <label>Default Sort Order</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__FilterDataTitle__c</fullName>
        <label>Filter Data Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__Geolocation_API_URL__c</fullName>
        <label>Geolocation API URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Incapfs__Max_Result_Size_Exceeded__c</fullName>
        <label>Max Result Size Exceeded</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__Max_Result_Size__c</fullName>
        <description>If actual matching record count is more than this count then we need to show an alert msg</description>
        <label>Max Result Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incapfs__MaximumSelectedRecords__c</fullName>
        <label>Maximum Selected Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incapfs__PageTitle__c</fullName>
        <label>Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__Page_Type__c</fullName>
        <label>Page Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__ResultTitle__c</fullName>
        <label>Result Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__SearchDefaultPageSize__c</fullName>
        <label>Search Default Page Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incapfs__SearchFieldTitle__c</fullName>
        <label>Search Field Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__SelectObjectTitle__c</fullName>
        <label>Select Object Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__SelectionTitle__c</fullName>
        <label>Selection Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ForceSight_Setting</label>
    <pluralLabel>Settings</pluralLabel>
</CustomObject>